# spoolbuddy

./: .gitignore  CONTRIBUTING.md  HARDWARE.md  README.md  update_website_wiki.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  firmware-release.yml
backend/: config.py  main.py  models.py  requirements.txt
backend/api/: cloud.py  device.py  printers.py  spools.py  support.py
backend/db/: database.py
backend/mqtt/: client.py
backend/services/: bambu_cloud.py
eez/src/ui/: screens.c
firmware/: Cargo.toml  update_eez_screens.sh
firmware/components/eez_ui/: ui.c  ui_backend.c  ui_hardware.c  ui_nfc_card.c  ui_status_bar.c  ui_status_bar.h
firmware/src/: backend_client.rs  main.rs  ota_manager.rs  scale_manager.rs
firmware/src/nfc/: pn5180.rs
frontend/src/: App.tsx  index.css
frontend/src/components/: AmsCard.tsx  Layout.tsx
frontend/src/components/inventory/: AddSpoolModal.tsx  index.ts  utils.ts
frontend/src/lib/: api.ts  toast.tsx  websocket.tsx
frontend/src/pages/: Dashboard.tsx  Inventory.tsx  Printers.tsx  Settings.tsx
lvgl-simulator-sdl/: CMakeLists.txt  backend_client.c  backend_client.h
lvgl-simulator-sdl/ui/: ui_backend.c  ui_nfc_card.c  ui_scan_result.c  ui_status_bar.c  ui_status_bar.h
lvgl-simulator/src/: main.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: index.css
web/src/components/: Layout.tsx
web/src/components/inventory/: AddSpoolModal.tsx  ColumnConfigModal.tsx  DeleteModal.tsx  SpoolCard.tsx  SpoolsTable.tsx  StatsBar.tsx  index.ts  utils.ts
web/src/lib/: api.ts  websocket.tsx
web/src/pages/: Dashboard.tsx  Inventory.tsx  Printers.tsx  Settings.tsx
